--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                     <tr id="h" class=""><td>2021</td><td>8.4</td></tr>
                     <tr id="h" class=""><td>2022</td><td>14.5</td></tr>
                     <tr id="h" class=""><td>2023</td><td>6.4</td></tr>
-                    <tr id="h" class=""><td>2024</td><td>4.0</td></tr>
                 </tbody>
             </table>
         </div>
@@ -53,6 +52,7 @@
             <h2>Расчёт инфляции</h2>
             <label for="startYear">Стартовый год:</label>
             <select id="startYear">
+                <option value="2000">2000</option>
      <option value="2001">2001</option>
                 <option value="2002">2002</option>
                 <option value="2003">2003</option>
