--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <tr id="h" class=""><td>2021</td><td>8.4</td></tr>
                     <tr id="h" class=""><td>2022</td><td>14.5</td></tr>
                     <tr id="h" class=""><td>2023</td><td>6.4</td></tr>
+                    <tr id="h" class=""><td>2024</td><td>9.52</td></tr>
                 </tbody>
             </table>
         </div>
@@ -76,6 +77,7 @@
                 <option value="2021">2021</option>
                 <option value="2022">2022</option>
                 <option value="2023">2023</option>
+                <option value="2024">2024</option>
             </select>
 
             <label for="endYear">Конечный год:</label>
@@ -103,6 +105,7 @@
                 <option value="2021">2021</option>
                 <option value="2022">2022</option>
                 <option value="2023">2023</option>
+                <option value="2024">2024</option>
             </select>
 
             <label for="amount">Сумма:</label>
@@ -117,3 +120,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
